--- a/deputado/static/css/deputado.css
+++ b/deputado/static/css/deputado.css
@@ -2,9 +2,6 @@ body{
 	align-content: center;
 	background-color: #514663;
 }
-.container{
-	color: red;
-}
 
 img{
 	width: 7.125em;
@@ -35,3 +32,14 @@ img{
 	margin-left: auto;
 	margin-right: auto;
 }
+
+.right-container{
+	border-radius: 2px;
+	margin-top: 5%;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  	background-color: #658e9c;
+}
+.right-container:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  }
